# quizzy

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  all_tests.sh  build.sh  proto_fastapi_oauth2.py  pyproject.toml  start_db.sh
.github/workflows/: docker-image.yml
proto/: proto_fastapi_oauth2.py
quizzes/: example.yml  micronutrition.yml
src/quizzy/: Quiz.py  __init__.py  __main__.py  auth.py  config.py  crypto.py  database.py  directus_backend.py  directus_sync.py  icloud_contacts.py  main.py  main2.py  models.py  quizzy.sqlite  read_quiz.py  vcard.py
tests/: coverage.conf  docker-compose.yml  test_api.py  test_crypto.py  test_database.py  test_geoip.py  test_oidc.py  test_ui.py
