[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "quizzy"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
description = ""
dependencies = [
    "gunicorn>=23.0.0",
    "nicegui>=2.24.2",
    "pony>=0.7.19",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/quizzy/-/issues"
Homepage = "https://github.com/ydethe/quizzy"
Source = "https://github.com/ydethe/quizzy"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "genbadge[all]>=1.1.1,<2.0.0",
    "docstr-coverage>=2.2.0",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=quizzy",
    "--doctest-modules",

]
testpaths = [
    "tests/",
]

[tool.pdm.scripts]
doc.shell = """\
    mkdir -p htmldoc/quizzy
    pdoc --html --force --config latex_math=True -o htmldoc quizzy
    coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
    coverage xml -o htmldoc/coverage/coverage.xml --rcfile tests/coverage.conf
    docstr-coverage src/quizzy -miP -sp -is -idel --skip-file-doc --badge=htmldoc/quizzy/doc_badge.svg
    genbadge coverage -l -i htmldoc/coverage/coverage.xml -o htmldoc/quizzy/cov_badge.svg
"""
